WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
320764
REGRESSION(
316049@main
): iPhone Mirroring Mail erroneously marks autocorrected text
https://bugs.webkit.org/show_bug.cgi?id=320764
Summary
REGRESSION(316049@main): iPhone Mirroring Mail erroneously marks autocorrecte...
Sammy Gill
Reported
2026-07-31 14:05:27 PDT
rdar://183711076
Attachments
Add attachment
proposed patch, testcase, etc.
Sammy Gill
Comment 1
2026-07-31 14:14:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/70635
EWS
Comment 2
2026-08-03 02:34:28 PDT
Committed
318442@main
(0b462501b25f): <
https://commits.webkit.org/318442@main
> Reviewed commits have been landed. Closing PR #70635 and removing active labels.
EWS
Comment 3
2026-08-03 14:35:18 PDT
Committed
316606.267@safari-7625-branch
(c8a225ad683c): <
https://commits.webkit.org/316606.267@safari-7625-branch
> Reviewed commits have been landed. Closing PR #6162 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug