REGRESSION(316049@main): iPhone Mirroring Mail erroneously marks autocorrected text https://bugs.webkit.org/show_bug.cgi?id=320764 rdar://183711076

Unreviewed, reverting 316049@main

Reverted change:

    x.com: Software keyboard delete key is unresponsive after using dictation
    https://bugs.webkit.org/show_bug.cgi?id=317864
    rdar://163454428

Revert "x.com: Software keyboard delete key is unresponsive after using dictation"

This reverts commit ec004b440d887772ccf6b4b7a5f57a75cf317cf8.

Canonical link: https://commits.webkit.org/318442@main